<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="p_ModbusRx_PLCMemory" Id="{0f58525f-8f65-498a-aa7e-c3ab518424d1}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM p_ModbusRx_PLCMemory
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*
{"MFX:LENS:",  "XRT_ONLY:LOW" , "aoFLOAT_PORT",    "0", "FLOAT32_LE",  "1", "1000",  "0", "um"}
{"MFX:LENS:",  "XRT_ONLY:HIGH", "aoFLOAT_PORT",    "2", "FLOAT32_LE",  "1", "1000",  "0", "um"}
{"MFX:LENS:", "LENS1_750:LOW" , "aoFLOAT_PORT",    "4", "FLOAT32_LE",  "1", "1000",  "0", "um"}
{"MFX:LENS:", "LENS1_750:HIGH", "aoFLOAT_PORT",    "6", "FLOAT32_LE",  "1", "1000",  "0", "um"}
{"MFX:LENS:", "LENS2_428:LOW" , "aoFLOAT_PORT",    "8", "FLOAT32_LE",  "1", "1000",  "0", "um"}
{"MFX:LENS:", "LENS2_428:HIGH", "aoFLOAT_PORT",   "10", "FLOAT32_LE",  "1", "1000",  "0", "um"}
{"MFX:LENS:", "LENS3_333:LOW" , "aoFLOAT_PORT",   "12", "FLOAT32_LE",  "1", "1000",  "0", "um"}
{"MFX:LENS:", "LENS3_333:HIGH", "aoFLOAT_PORT",   "14", "FLOAT32_LE",  "1", "1000",  "0", "um"}
*)
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[ 0]), destAddr:=ADR(NO_LENS_LIMIT.TRIP_LOW), n:=SIZEOF(NO_LENS_LIMIT.TRIP_LOW));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[ 2]), destAddr:=ADR(NO_LENS_LIMIT.TRIP_HIGH), n:=SIZEOF(NO_LENS_LIMIT.TRIP_HIGH));

MEMCPY(srcAddr:=ADR(mb_PLC_Memory[ 4]), destAddr:=ADR(LENS1_LIMIT.TRIP_LOW), n:=SIZEOF(LENS1_LIMIT.TRIP_LOW));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[ 6]), destAddr:=ADR(LENS1_LIMIT.TRIP_HIGH), n:=SIZEOF(LENS1_LIMIT.TRIP_HIGH));

MEMCPY(srcAddr:=ADR(mb_PLC_Memory[ 8]), destAddr:=ADR(LENS2_LIMIT.TRIP_LOW), n:=SIZEOF(LENS2_LIMIT.TRIP_LOW));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[10]), destAddr:=ADR(LENS2_LIMIT.TRIP_HIGH), n:=SIZEOF(LENS2_LIMIT.TRIP_HIGH));

MEMCPY(srcAddr:=ADR(mb_PLC_Memory[12]), destAddr:=ADR(LENS3_LIMIT.TRIP_LOW), n:=SIZEOF(LENS3_LIMIT.TRIP_LOW));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[14]), destAddr:=ADR(LENS3_LIMIT.TRIP_HIGH), n:=SIZEOF(LENS3_LIMIT.TRIP_HIGH));

MEMCPY(srcAddr:=ADR(mb_PLC_Memory[16]), destAddr:=ADR(i_fPhotonEnergy), n:=SIZEOF(i_fPhotonEnergy));]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>